New parameters documentation

--- a/sample_inputs/integration.ini
+++ b/sample_inputs/integration.ini
@@ -255,13 +255,15 @@ volumeStepSize = 1000
 seed = 1234
 
 # The shape of the molecule. It is specified by "shapeName", while its (shape-dependent) parameters, such as eg. the
-# axis ratio are given by "shapeAttributes". Each shape may support one ore more interaction types. A full list of
-# shapes, together with their attributes and interactions is given below. "shapeName" is presented together with
-# "shapeAttributes" in the format "[shape name] (shape attributes)". For each list entry (a single shape) all supported
-# interaction are shown as a sublist. Moreover, each shape declares a set of the so-called named points, which are
-# some features, like origins of constituent spheres, ect. By default, each shape defines two named points - "cm" for
-# center of mass and "o" for geometric origin. Non-standard, if present, one are described for each shape separately.
-# 1. "Sphere [radius]"
+# axis ratio are given by "shapeAttributes". Each shape may support one ore more interaction types, specified by
+# "interaction". A full list of shapes, together with their attributes and interactions is given below. Each shape
+# declares a set of the so-called named points, which are some features, like origins of constituent subshapes, ect. By
+# default, each shape defines two named points - "cm" for center of mass and "o" for geometric origin. Non-standard, if
+# present, one are described for each shape individually.
+#
+# 1. "shapeName = Sphere"
+#    "shapeAttributes = [radius]"
+#    "interaction = [interaction]"
 #    sphere with a radius "[radius]". Supported interaction types:
 #    1.1. "hard"
 #         hard-core interaction
@@ -277,63 +279,157 @@ seed = 1234
 #         short-ranged attractive or repulsive interaction, resembling screened dipolar interaction, defined as:
 #         epsilon ((sigma/r)^2 - 1)   for r < sigma,
 #         0                           for r >= sigma.
-# 2. "Spherocylinder [length] [radius]"
+#
+# 2. "shapeName = Spherocylinder"
+#    "shapeAttributes = [length] [radius]"
+#    "interaction = hard"
 #    spherocylinder with cap radius "[radius]" (or, equivalently, half-width) and the distance between cap centers
-#    "[length]". For the default orientation, "Spherocylinder" is aligned with x axis. Supported interactions:
-#    2.1. "hard"
-#         hard-core interaction
-#    It defines two additional named points: "beg" and "end" for origins of caps of the spherocylinder.
-# 3. "KMer [number of spheres] [radius] [distance]"
+#    "[length]". For the default orientation, "Spherocylinder" is aligned with x axis. Only hard interaction is
+#    supported. It defines two additional named points: "beg" and "end" for origins of caps of the spherocylinder.
+#
+# 3. "shapeName = KMer"
+#    "shapeAttributes = [number of spheres] [radius] [distance]"
+#    "interaction = [interaction; the same ones as for Sphere]"
 #    a linear chain of "[number of spheres]" spheres with radius "[radius]". The centers are equally spaced with a
-#    distance "[distance]". Supported interactions:
-#    ---- same as for "Sphere", however each pair of beads is treated separately
-#    It defines some additional named points. First group are ones inherited from Polysphere, namely "s[x]", where "[x]"
-#    is an index of a single sphere (starting from 0) describing their origins. Second group is KMer-specific: "beg"
-#    and "end" for the first and the last sphere's origin.
-# 4. "PolysphereBanana [arc radius] [arc angle] [number of spheres] [sphere radius]"
+#    distance "[distance]". Supported interactions: same as for "Sphere", however each pair of beads is treated
+#    separately. It defines some additional named points. First group are ones inherited from Polysphere, namely "s[x]",
+#    where "[x]" is an index of a single sphere (starting from 0) describing their origins. Second group is
+#    KMer-specific: "beg" and "end" for the first and the last sphere's origin.
+#
+# 4. "shapeName = PolysphereBanana"
+#    "shapeAttributes = [arc radius] [arc angle] [number of spheres] [sphere radius]"
+#    "interaction = [interaction; the same ones as for Sphere]"
 #    chain of "[number of spheres]" spheres with radius "[sphere radius]" placed on an arc (banana-shaped). The arc is
 #    defined by its radius "[arc radius]" and arc angle "[arc angle]". The centres of spheres are equidistantly placed
 #    on the arc and its endpoints are at the same time the centres of outermost spheres. The centers of spheres in
 #    "PolysphereBanana" molecule with a default orientation lie within xy plane, the main axis (joining the ends of the
 #    arc) is y axis and the arc is bent towards the negative x semi-axis (the vector joining either endpoint and the
-#    middle has a negative x component). Supported interactions:
-#    ---- same as for "Sphere", however each pair of beads is treated separately
-#    It defines some additional named points. First group are ones inherited from Polysphere, namely "s[x]", where "[x]"
-#    is an index of a single sphere (starting from 0) describing their origins. Second group is
+#    middle has a negative x component). Supported interactions: same as for "Sphere", however each pair of beads is
+#    treated separately. It defines some additional named points. First group are ones inherited from Polysphere, namely
+#    "s[x]", where "[x]" is an index of a single sphere (starting from 0) describing their origins. Second group is
 #    PolysphereBanana-specific: "beg" and "end" for the first and the last sphere's origin.
-# 5. "PolysphereLollipop [num of spheres] [small radius] [large radius] [small penetration] [large penetration]"
+#
+# 5. "shapeName = PolysphereLollipop"
+#    "shapeAttributes = [num of spheres] [small radius] [large radius] [small penetration] [large penetration]"
+#    "interaction = [interaction; the same ones as for Sphere]"
 #    linear chain of "[num of spheres]" spheres, where a single sphere at the end has different size than the rest of
 #    them (usually larger). "[small radius]" and "[large radius]" are radii of, respectively, all apart from the last,
 #    and the last sphere. Similarly, "[small penetration]" and "[large penetration]" describe how much spheres overlap.
-#    In particular, 0 means that the spheres are tangent.
-#    ---- same as for "Sphere", however each pair of beads is treated separately
-#    It defines some additional named points. First group are ones inherited from Polysphere, namely "s[x]", where "[x]"
-#    is an index of a single sphere (starting from 0) describing their origins. Second group is
-#    PolysphereLollipop-specific: "ss" and "sl" for origins of, respectively, the first small sphere at the beginning
-#    and the large sphere.
-# 6. "PolysphereWedge [num of spheres] [small radius] [large radius] [penetration]"
+#    In particular, 0 means that the spheres are tangent. Supported interactions: same as for "Sphere", however each
+#    pair of beads is treated separately. It defines some additional named points. First group are ones inherited from
+#    Polysphere, namely "s[x]", where "[x]" is an index of a single sphere (starting from 0) describing their origins.
+#    Second group is PolysphereLollipop-specific: "ss" and "sl" for origins of, respectively, the first small sphere at
+#    the beginning and the large sphere.
+#
+# 6. "shapeName = PolysphereWedge"
+#    "shapeAttributes = [num of spheres] [small radius] [large radius] [penetration]"
+#    "interaction = [interaction; the same ones as for Sphere]"
 #    linear chain of "[num of spheres]" spheres, where radii of spheres are increased linearly. "[small radius]" and
 #    "[large radius]" are radii of, respectively, the first and the last sphere (usually the last one is larger).
-#    "[penetration]" describes how much spheres overlap. In particular, 0 means that the spheres are tangent.
-#    ---- same as for "Sphere", however each pair of beads is treated separately
-#    It defines some additional named points. First group are ones inherited from Polysphere, namely "s[x]", where "[x]"
-#    is an index of a single sphere (starting from 0) describing their origins. Second group is
-#    PolysphereWedge-specific: "ss" and "sl" for origins of, respectively, the smallest sphere and the largest one.
-# 7. "PolyspherocylinderBanana [arc radius] [arc angle] [number of segments] [radius] ([subdivisions])"
+#    "[penetration]" describes how much spheres overlap. In particular, 0 means that the spheres are tangent. Supported
+#    interactions: same as for "Sphere", however each pair of beads is treated separately. It defines some additional
+#    named points. First group are ones inherited from Polysphere, namely "s[x]", where "[x]" is an index of a single
+#    sphere (starting from 0) describing their origins. Second group is PolysphereWedge-specific: "ss" and "sl" for
+#    origins of, respectively, the smallest sphere and the largest one.
+#
+# 7. "shapeName = PolyspherocylinderBanana"
+#    "shapeAttributes = [arc radius] [arc angle] [number of segments] [radius] ([subdivisions])"
+#    "interaction = hard"
 #    a molecule similarly shaped as "PolysphereBanana", but using spherocylinders. "[arc radius]" and "[arc angle]" have
 #    identical meaning as in "PolysphereBanana", "[radius]" is the radius of spherocylinders' caps (equivalently their
 #    half-width). "[number of segments]" is a number of spherocylinders used to approximate the arc - the arc is divided
 #    into that many segments and spherocylinders are placed around them. The default orientation is analogous to
 #    "PolysphereBanana". If the optional parameter "[subdivisions]" is specified, each spherocylinder is divided into
 #    that many parts - it does not change the physics, but may increase the speed of the simulation. Default value is 1
-#    (no divisions). Supported interactions:
-#    6.1. "hard"
-#         hard-core repulsion of each pair of spherocylinders
-#    It defines some additional named points. First group are ones inherited from Polyspherocylinder, namely "o[x]",
-#    "b[x]", and "e[x]", where "[x]" is an index of a single spherocylinder (starting from 0) and "o", "b" and "e" stand
-#    for its, respectively, origin, first cap's origin and last cap's origin. Second group is
-#    PolyspherocylinderBanana-specific: "beg" is the origin of the first cap at the beginning of the banana, and "end",
-#    similarly, for the last cap.
+#    (no divisions). Only hard interaction is supported. It defines some additional named points. First group are ones
+#    inherited from Polyspherocylinder, namely "o[x]", "b[x]", and "e[x]", where "[x]" is an index of a single
+#    spherocylinder (starting from 0) and "o", "b" and "e" stand for its, respectively, origin, first cap's origin and
+#    last cap's origin. Second group is PolyspherocylinderBanana-specific: "beg" is the origin of the first cap at the
+#    beginning of the banana, and "end", similarly, for the last cap.
+#
+# 8. "shapeName = SmoothWedge"
+#    "shapeAttributes = [length] [large radius] [small radius] ([subdivisions = 1])"
+#    "interaction = hard"
+#    a shape similar to PolysphereWedge, but smooth. It is built by placing 2 spheres with radii "[large radius]" (R)
+#    and "[small radius]" (r) with centers distant by "[length]" (l) and computing a convex hull of them. Spheres are
+#    placed on z axis, large at the bottom and small at the top with z coordinates, respectively, (R - r - l)/2 and
+#    (R - r + l)/2. This way the circumsphere is optimal. One can optionally specify number of subdivisions:
+#    "[subdivisons]" to use the neighbour grid more efficiently. Only hard interaction is supported. It defines two
+#    non-standard named points: "ss" and "sl" for the origins of, respectively, the small sphere and the large one.
+#
+# 9. "shapeName = GenericXenoCollide"
+#    "shapeAttributes = primaryAxis [...] secondaryAxis [...] geometricOrigin [...] volume [...] script [...]
+#                       (namedPoints [...])"
+#    "interaction = hard"
+#    a general hard convex shape with collision detection performed using XenoCollide algorithm. Shape attributes are
+#    in the format "[attribute name] [attribute value]" (ex. "volume 2.5") - their order is arbitrary, but all required
+#    attributes have to be specified (all but optional "namedPoints").
+#    9.1. "primaryAxis [x] [y] [z]"
+#         specifies the primary molecular axis used for example in P2 order parameter. "[x]", "[y]", "[z]" are vector
+#         coordinates of the axis (is is normalized automatically)
+#    9.2. "secondaryAxis [x] [y] [z]"
+#         specifies the secondary molecular axis used for example in flip moves. "[x]", "[y]", "[z]" are vector
+#         coordinates of the axis (is is normalized automatically)
+#    9.3. "geometricOrigin [x] [y] [z]"
+#         specifies the geometric origin, used for example in flip moves. "[x]", "[y]", "[z]" are its coordinates
+#    9.4. "volume [volume value]"
+#         specifies the volume of the shape; unfortunately there is no automatic method to calculate the volume exactly
+#    9.5. "script [&-separated commands]"
+#         defines the shape. It is done by 3 types of operations: 1. creating primitive shapes, 2. moving and rotating
+#         them, 3. combining them using Minkowski sum, Minkowski difference or convex hull. Primitive shapes are created
+#         on the stack. Moving and rotating operations transform last shape in the stack, and operations combine two
+#         last shapes on the stack. Please note, that moving and rotating is visible only when shapes are combined.
+#         For a single shape and moves and rotations are ignored.
+#         Available primitive shapes:
+#         9.5.1.  "cuboid [x side length] [y side length] [z side length]"
+#                 places an axis-oriented cuboid with side lengths "[... side length]" with its center at {0, 0, 0}
+#         9.5.2.  "disk [radius]"
+#                 places a disk with radius "[radius]" with its center at {0, 0, 0} on XY plane
+#         9.5.3.  "ellipse [x semi-axis length] [y semi-axis length]"
+#                 places an axis-oriented ellipse with semi-axes lengths "[... semi-axis length]" with its center at
+#                 {0, 0, 0} on XY plane
+#         9.5.4.  "ellipsoid [x semi-axis length] [y semi-axis length] [z semi-axis length]"
+#                 places an axis-oriented ellipsoid with semi-axes lengths "[... semi-axis length]" with its center at
+#                 {0, 0, 0}
+#         9.5.5.  "football [length] [radius]"
+#                 places a rugby-ball shaped solid. It is constructed by taking three points (l = "[length]",
+#                 r = "[radius]"): {-l/2, 0, 0}, {l/2, 0, 0}, {0, r, 0}, joining them using circle fragment and
+#                 revolving it around x axis
+#         9.5.6.  "point [x] [y] [z]"
+#                 places a singular point at "[x] [y] [z]" coordinates
+#         9.5.7.  "rectangle [x side length] [y side length]"
+#                 places an axis-oriented rectangle with side lengths "[... side length]" with its center at {0, 0, 0}
+#                 on XY plane
+#         9.5.8.  "saucer [radius] [thickness]"
+#                 places a saucer shaped solid. It is constructed by taking three points (t = "[thickness]",
+#                 r = "[radius]"): {0, 0, -r}, {0, 0, r}, {t/2, 0, 0}, joining them using circle fragment and
+#                 revolving it around x axis, resulting in a spherical cap. It is then joined with another cap, which
+#                 is mirrored through YZ plane, creating a solid shape
+#         9.5.9.  "segment [length]"
+#                 places a segment between points (l = "[length]"): {-l/2, 0, 0} and {l/2, 0, 0}
+#         9.5.10. "sphere [radius]"
+#                 places a sphere with radius "[radius]" with its center at {0, 0, 0}
+#         Moving and rotation operations:
+#         9.5.11. "move [x] [y] [z]"
+#                 translates the last shape on the stack by a vector "[x] [y] [z]"
+#         9.5.12. "rotate [x angle] [y angle] [z angle]"
+#                 rotates the last shape on the stack around its origin by subsequent counterclockwise rotations:
+#                 1. around x axis by "[x angle]" angle, 2. around y axis by "[y angle]" angle, 3. around z axis by
+#                 "[z angle]" angle. All angles are in degrees.
+#         Combining operations:
+#         9.5.13. "sum"
+#                 replaces last two shapes on the stack with their Minkowski sum
+#         9.5.14. "diff"
+#                 replaces last two shapes on the stack with their Minkowski different ("before last" minus "last")
+#         9.5.13. "wrap"
+#                 replaces last two shapes on the stack with their convex hull
+#         As an example: the shape "SmoothWedge" with attributes "5 2 1" can be recreated by:
+#         "script sphere 2 & move 0 0 -2 & sphere 1 & move 0 0 3 & wrap"
+#    9.6. "namePoints [point name 1] [x1] [y1] [z1] [point name 2] [x2] [y2] [z2] ..."
+#         specifies additional named points (optional attribute). For each point, first the name (without spaces!) is
+#         given "[point name i]", then its subsequent coordinates "[xi] [yi] [zi]". For example, to mimic the ones from
+#         "SmoothWedge" with attributes "5 2 1", one should use: "namedPoints sl 0 0 -2 ss 0 0 3"
+#    Only hard interaction is supported.
 shapeName = Sphere
 shapeAttributes = 0.5
 interaction = hard
@@ -419,8 +515,20 @@ snapshotEvery = 100
 # other package-specific information. The format may change at any moment
 packingFilename = packing_gas.dat
 
-# The name of the file to store the visualization of the final shapshot in the format of Wolfram
-# Mathematica notebook. If empty, it is not generated.
+# If specified, the visualization of the final shapshot in the format of Wolfram Mathematica notebook will be stored to
+# a file. Format:
+# "[file name] ([format = standard])"
+# "[file name]" is the name of the file where the visualization will be stored. "[format]" specifies how it will be
+# stored. Available formats:
+# 1. "standard"
+#    A standard style - each shape is printed separately. The output is Graphics3D with a list of shapes, which is easy
+#    to process but may grow large. It is advised for shapes with a small footprint.
+# 2. "affineTransform"
+#    A single shape with the default position and orientation is printed and then, for each shape in the packing it is
+#    copied and appropriate affine transformation is applied to it. The output is Graphics3D with a list of positions
+#    and orientations which is mapped over a single shape using AffineTransform. Is is advised for shapes with a large
+#    footprint and for easy access to positions and orientations of the shapes.
+# If left empty, creating Wolfram Mathematica visualization is omitted.
 wolframFilename = packing_gas.nb
 
 # The name of output file to store ensemble-averaged observables in SSV format (space separated values). If empty, no
