--- a/sample_inputs/integration.ini
+++ b/sample_inputs/integration.ini
@@ -189,12 +189,12 @@ numOfParticles = 1000
 #    Performs a rotation of a randomly selected molecule. Rotation is done around a random axis by an angle sampled
 #    uniformly from an interval [-"[angle]", "[angle]"] ("[angle]" is initialized from "[initial angle]"). In a single
 #    cycle each particle is perturbed on average once.
-# 3. "rototranlslation [initial step size] [initial angle] ([max step size])"
+# 3. "rototranlslation [initial step size] ([initial angle] ([max step size]))"
 #    Performs simultaneous translation and rotation of a randomly selected molecule. The way of sampling and parameter
 #    names are the same as for "translation" and "rotation" moves. Both: translation and rotation step sizes are always
-#    adjusted simultaneously by the same factor, so they ratio stays constant. The ratio can be selected heuristically
-#    by benchmarking, or using a rule of thumb: maximal rotation should move the furthest part of the particle by the
-#    same amount as the maximal translation.
+#    adjusted simultaneously by the same factor, so they ratio stays constant. If "[initial angle]" is omitted, its
+#    optimal value is estimated automatically using heuristic formula (it is optimized for elongated molecules - for
+#    small anisotropies it may be too large).
 # 4. "flip ([flip every])"
 #    Performs a rotation by 180 degrees of a random particle around its secondary axis. During one cycle
 #    1 / "[flip every]" fraction of particles is flipped (if not specified, "[flip every]" defaults to 10).
