integration.ini documentation update

--- a/sample_inputs/integration.ini
+++ b/sample_inputs/integration.ini
@@ -670,22 +670,53 @@ recordingFilename = recording_gas.ramtrj
 #    9.x. "psi[rank]"
 #         bond order parameter of rank "[rank]". There are as many of them as specified; INTERVAL VALUE
 # 10. "rotationMatrixDrift"
-#    squared Frobenius norm of the expression M M^T - 1, where M is an orientation of a given molecule. This observable
-#    is useful to track the drift of orientation matrix errors cumulating during the simulation. Constituent values:
-#    10.1. "F^2"
-#          mean squared Frobenius norm, averages over all molecules in a snapshot; INTERVAL VALUE
-#    10.2. "min(F^2)"
-#          minimal squared Frobenius norm in a snapshot; INTERVAL VALUE
-#    10.3. "max(F^2)"
-#          maximal squared Frobenius norm in a snapshot; INTERVAL VALUE
+#     squared Frobenius norm of the expression M M^T - 1, where M is an orientation of a given molecule. This observable
+#     is useful to track the drift of orientation matrix errors cumulating during the simulation. Constituent values:
+#     10.1. "F^2"
+#           mean squared Frobenius norm, averages over all molecules in a snapshot; INTERVAL VALUE
+#     10.2. "min(F^2)"
+#           minimal squared Frobenius norm in a snapshot; INTERVAL VALUE
+#     10.3. "max(F^2)"
+#           maximal squared Frobenius norm in a snapshot; INTERVAL VALUE
 # 11. "temperature"
-#    current temperature of the system. Constituent values:
-#    11.1. "T"
-#          the temperature; INTERVAL VALUE
+#     current temperature of the system. Constituent values:
+#     11.1. "T"
+#           the temperature; INTERVAL VALUE
 # 12. "pressure"
-#    current pressure of the system. Constituent values:
-#    12.1. "p"
+#     current pressure of the system. Constituent values:
+#     12.1. "p"
 #          the pressure; INTERVAL VALUE
+# 13. "fourierTracker [wavenumber x] [... y] [... z] [function]"
+#     Goldstone tracker observable which tracks the movement of the system. The tracking is done by finding the maximum
+#     of
+#         F(x, y, z) = [function] * rho(x, y, z),
+#     where rho(x, y, z) is local density, however the above expression is restricted only to Fourier components
+#     described by n_x = "[wavenumber x]", n_y = "[... y]", n_z "[... z]". More precisely, given Fourier expansion of F:
+#         F(x, y, z) = sum_{n_x,n_y,n_z = 0}^{inf} prod_{i in {x,y,z}} (A_i cos(2pi n_i i) + Bi sin(2pi n_i i)),
+#     only the terms with n_x = "[wavenumber x]", n_y = "[... y]", n_z = "[... z]" are left. Please notice that x, y, z
+#     are relative coordinates to facilitate calculation in the triclinic simulation box. As the terms are oscillating,
+#     there are many global maxima - the one which is closest to the previously registered maximum is selected (for the
+#     first measurement, the maximum closest to (x, y, z) = (0, 0, 0) is chosen). One or two of "[wavenumber ...]" can
+#     be 0 - it then reduces the tracking to, respectively, 2D and 1D.
+#     [function] is some function taking shape at a given position and returning some value. It can be one of:
+#     13.1.1. "const"
+#             constant function. F(x, y, z) reduces then to rho(x, y, z), so it can be used to track density modulation
+#     13.1.2. "(primaryAxis|secondaryAxis) (x|y|z)"
+#             if returns x|y|z component of primaryAxis|secondaryAxis of the shape, so it can be used to track
+#             modulation of shape axis
+#     One can think of this observable as the generalization of finding the phase of smectic order parameter. In fact,
+#     if only one of "[wavenumber ...]" is non-zero and "[function]" = "const", it reduces to calculating the position
+#     of the maximum of smectic density modulation.
+#     Constituent values (as in all Goldstone tracker observables):
+#     13.2.1. "[function signature]_fourier_tracker_x"
+#     13.2.2. "[function signature]_fourier_tracker_y"
+#     13.2.3. "[function signature]_fourier_tracker_z"
+#             position of the drifting maximum of oscillations
+#     13.2.4. "[function signature]_fourier_tracker_ox"
+#     13.2.5. "[function signature]_fourier_tracker_oy"
+#     13.2.6. "[function signature]_fourier_tracker_oz"
+#             Euler angles of system orientation drift. It is not tracker by the "fourierTracker", so they are always 0
+#     "[function signature]" is some shorthand notation of the selected "[function]" variant.
 observables = numberDensity , inline packingFraction , compressibilityFactor
 
 # Observables with many values (for example whole plots), which are too large to be normal observables. They can however
@@ -710,6 +741,8 @@ observables = numberDensity , inline packingFraction , compressibilityFactor
 #         "[h]", "[k]", "[l]". Then, pairs are selected only from within the layer (subject to PBC) and distance is
 #         computed along the layer plane. "[focal point]" describes which named point should be used and defaults to
 #         mass center "cm". "[binning signature name]" := "lr"
+#    The observable outputs rows of the form:
+#        r rho(r)
 #    Observable name is "rho_[binning signature name]", where "[binning signature name]" depends on
 #    "[binning specification]".
 # 2. "pairAveragedCorrelation [max distance] [num bins] [correlation function] [binning specification]"
@@ -719,8 +752,21 @@ observables = numberDensity , inline packingFraction , compressibilityFactor
 #    2.1. "S110 [axis]"
 #         S_110 correlation function, defined as the dot product of the axes of molecules. "[axis]" can be "primary" or
 #         "secondary" and specifies which molecular axis should be used. "[function signature name]" := "S110"
+#    The observable outputs rows of the form:
+#        r corr(r)
 #    Observable name is "[function signature name]_[binning signature name]", where "[function signature name]" depends
 #    on the chosen function and "[binning signature name]" on binning specification.
+# 3. "densityHistogram n_bins [number of bins x] [... y] [... z] (tracker [tracker name and arguments])"
+#    calculates the density histogram of the system with number of bins in each direction specified by
+#    "[number of bins ...]". Number of bins equal 0 or 1 turns off binning in one direction. Bins are normalized in
+#    such a way that for a perfectly homogeneous system, regardless of the number of bins, each bin value would be 1.
+#    The system movement may be tracked and cancelled out using "tracker ...". "[tracker name and arguments]" can be
+#    any of Goldstone tracker observables (see "observables" field documention), for example "fourierTracker". The
+#    observable outputs each bin as a single row in the form:
+#        bin_middle_x ..._y ..._z bin_value
+#    where bin_middle_... represent the position of the middle of a given bin in [0, 1) relative coordinates. If binning
+#    in a given direction is turned off, its corresponding coordinate will be always equal 0.5.
+#    Observable name is "rho_xyz".
 bulkObservables = pairDensityCorrelation 5 100 radial
 
 # This is the end of parameters for "gas" run. Next ones are for subsequent "liquid" and "solid" runs. They have
