README.md update

--- a/sample_inputs/integration.ini
+++ b/sample_inputs/integration.ini
@@ -164,6 +164,10 @@ initialDimensions = 100 100 100
 #    "initialArrangement = hexagonal ncell 4 10 10 dim 10 | optimizeCell 0.1 yzx | columnar x 1234 | randomizeFlip 1234"
 #    Creates hexagonal lattice, optimizes cell size, makes the cell columnar along x axis and randomizes flips. All RNG
 #    seeds were equal 1234. The resulting phase is Col_h phase along x axis with random flips.
+#
+# "preview" program mode may be very useful when programming the initial arrangement - it enables one to see the
+# preview of the initial configuration before starting the simulation. For more information see
+# "./rampack preview --help".
 initialArrangement = sc default
 
 # If specified, walls will be created on both opposite box faces intersected by specified axes. For example, using
@@ -261,6 +265,9 @@ seed = 1234
 # default, each shape defines two named points - "cm" for center of mass and "o" for geometric origin. Non-standard, if
 # present, one are described for each shape individually.
 #
+# Program mode "shape-preview" may be useful when selecting shape parameters - it displays rich metadata and enables one
+# to generate Wolfram Mathematica preview of the shape. See "./rampack shape-preview --help" for more info.
+#
 # 1. "shapeName = Sphere"
 #    "shapeAttributes = [radius]"
 #    "interaction = [interaction]"
@@ -292,8 +299,7 @@ seed = 1234
 #    "interaction = [interaction; the same ones as for Sphere]"
 #    a linear chain of "[number of spheres]" spheres with radius "[radius]". The centers are equally spaced with a
 #    distance "[distance]". Supported interactions: same as for "Sphere", however each pair of beads is treated
-#    separately. It defines some additional named points. First group are ones inherited from Polysphere, namely "s[x]",
-#    where "[x]" is an index of a single sphere (starting from 0) describing their origins. Second group is
+#    separately. It defines some additional named points. First group is inherited from "Polysphere". Second group is
 #    KMer-specific: "beg" and "end" for the first and the last sphere's origin.
 #
 # 4. "shapeName = PolysphereBanana"
@@ -342,10 +348,8 @@ seed = 1234
 #    "PolysphereBanana". If the optional parameter "[subdivisions]" is specified, each spherocylinder is divided into
 #    that many parts - it does not change the physics, but may increase the speed of the simulation. Default value is 1
 #    (no divisions). Only hard interaction is supported. It defines some additional named points. First group are ones
-#    inherited from Polyspherocylinder, namely "o[x]", "b[x]", and "e[x]", where "[x]" is an index of a single
-#    spherocylinder (starting from 0) and "o", "b" and "e" stand for its, respectively, origin, first cap's origin and
-#    last cap's origin. Second group is PolyspherocylinderBanana-specific: "beg" is the origin of the first cap at the
-#    beginning of the banana, and "end", similarly, for the last cap.
+#    inherited from Polyspherocylinder (see 11.). Second group is PolyspherocylinderBanana-specific: "beg" is the origin
+#    of the first cap at the beginning of the banana, and "end", similarly, for the last cap.
 #
 # 8. "shapeName = SmoothWedge"
 #    "shapeAttributes = [length] [large radius] [small radius] ([subdivisions = 1])"
@@ -430,6 +434,44 @@ seed = 1234
 #         given "[point name i]", then its subsequent coordinates "[xi] [yi] [zi]". For example, to mimic the ones from
 #         "SmoothWedge" with attributes "5 2 1", one should use: "namedPoints sl 0 0 -2 ss 0 0 3"
 #    Only hard interaction is supported.
+#
+# 10. "shapeName = Polysphere"
+#     "shapeAttributes = primaryAxis [...] secondaryAxis [...] geometricOrigin [...] volume [...] spheres [...]
+#                        (namedPoints [...])"
+#     "interaction = [interaction; the same ones as for Sphere]"
+#     a general hard convex shape built from arbitrary set of spheres. Shape attributes are in the format
+#     "[attribute name] [attribute value]" (ex. "volume 2.5") - their order is arbitrary, but all required attributes
+#     have to be specified (all but optional "namedPoints"). Attributes "primaryAxis", "secondaryAxis",
+#     "geometricOrigin", "volume", "namedPoints" are the same as for "GenericXenoCollide" (see 9.1.-9.4, 9.6.).
+#     "[spheres]" defines the radii and positions of spheres:
+#     "[spehres]" := "[sphere specification 1] [sphere specification 2] ..."
+#     "[sphere specification i]" := "[r i] [x i] [y i] [z i]"
+#     where "[r i]" is radius of i-th sphere and "[x i] [y i] [z i]" coordinates of its center. "Polysphere", apart
+#     from custom named points, defines by default named points "s[x]", where "[x]" is an index of a single sphere
+#     (starting from 0) describing their origins. Supported interactions: same as for "Sphere", however each pair of
+#     beads is treated separately.
+#
+# 11. "shapeName = Polyspherocylinder"
+#     "shapeAttributes = primaryAxis [...] secondaryAxis [...] geometricOrigin [...] volume [...] spheres [...]
+#                        {spherocylinders [...]|chain [...]} (namedPoints [...])"
+#     "interaction = hard"
+#     a general hard convex shape built from arbitrary set of spherocylinders. Shape attributes are in the format
+#     "[attribute name] [attribute value]" (ex. "volume 2.5") - their order is arbitrary, but all required attributes
+#     have to be specified ("primaryAxis", "secondaryAxis", "geometricOrigin", "volume" and at least one of:
+#     "spherocylinders", "chain"; "namedPoints" is optional). Attributes "primaryAxis", "secondaryAxis",
+#     "geometricOrigin", "volume", "namedPoints" are the same as for "GenericXenoCollide" (see 9.1.-9.4, 9.6.).
+#     Spherocylinders are defined by either of: "spherocylinders", "chain" or combination of both.
+#     11.1. "[chain]" := "[chain radius] [x1] [y1] [z1] [x2] [y2] [z2] ..."
+#           Creates a chain of spherocylinders with radius "[chain radius]" joining points i = 1, 2, ..., whose
+#           coordinates are "[x i] [y i] [z i]".
+#     11.2. "[spherocylinders]" := "[spherocylinder specification 1] [spherocylinder specification 2] ..."
+#           "[spherocylinder specification i]" := "[r i] [beg x i] [beg y i] [beg z i] [end x i] [end y i] [end z i]"
+#           Creates a set of independent, not necessarily connected spherocylinders. i-th spherocylinder is specified
+#           by its radius "[r i]", position of first cap center "[beg x i] [beg y i] [beg z i]" and position of second
+#           cap center "[end x i] [end y i] [end z i]"
+#     "Polyspherocylinder", apart from custom named points, defines by default named points "o[x]", "b[x]", and "e[x]",
+#     where "[x]" is an index of a single spherocylinder (starting from 0) and "o", "b" and "e" stand for its,
+#     respectively, origin, first cap's center and last cap's center. Only hard interaction is supported.
 shapeName = Sphere
 shapeAttributes = 0.5
 interaction = hard
@@ -549,6 +591,10 @@ bulkObservableFilenamePattern = {}_gas.txt
 
 # If not empty, trajectories of the particles will be stored in a compact binary RAMTRJ format. It then can be replayed
 # for example to calculate different observables. Not all cycles are stored - it is done every "snapshotEvery" cycles.
+#
+# Trajectories are stored in real time and are safely closes when the exception is thrown. If however it gets somehow
+# truncated, it can be fixed using "./rampack trajectory --auto-fix". For more information see
+# "./rampack trajectory --help".
 recordingFilename = recording_gas.ramtrj
 
 # The observables which should be computed during simulation. Each observables is in the format
